# chess-autopost

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
apps/analyzer/: pyproject.toml  setup.py
apps/analyzer/chessbot_analyzer/: analysis_cache.py  cli.py  config.py  detectors.py  engine.py  pgn_ingest.py  scripting.py  scripting_llm.py  selectors.py  timeline.py
apps/analyzer/chessbot_analyzer/utils/: cache.py  evals.py  fen.py  logging.py  pgn.py
apps/analyzer/tests/: test_detectors.py  test_timeline_builder.py
apps/renderer/: package.json  remotion.config.ts  tsconfig.json
apps/renderer/public/: timeline.json
apps/renderer/src/: index.tsx
apps/renderer/src/components/: Arrow.tsx  Board.tsx  EvalBar.tsx  Heatmap.tsx  PieceSprites.tsx  PinHighlight.tsx  PortraitPanel.tsx
apps/renderer/src/compositions/: TitleCard.tsx  Video.tsx
apps/renderer/src/lib/: audio-browser.ts  audio.ts  sq.ts
apps/renderer/src/scenes/: SceneAltPreview.tsx  SceneMainMove.tsx  SceneReset.tsx
apps/renderer/src/types/: timeline.d.ts
apps/uploader/: chapters.ts  cli.ts  metadata.ts  youtube_client.ts
apps/voice/: aligner.py  cli.ts  elevenlabs_client.ts  text_normalizer.ts
infra/migrations/: 001_init.sql
scripts_other_vids/: brainychess.md  brainychess2.md  brainychess3.md  brainychess4.md  squareonechess.md
services/orchestrator/: build_video.py
services/orchestrator/ingest/: chesscom_fetch.py  ingest_db.py  lichess_fetch.py
